fiexd bug no hidden vertical overflow scroll bar in cv

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,7 +12,7 @@ body {
   padding-left: 10%;
   font-size: 25px;
   line-height: 20%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 
